--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,12 @@ dependencies {
     def lifecycle_version = "2.3.0"
     def arch_version = "2.1.0"
 
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation("io.coil-kt:coil:1.1.1")
+
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
