widget set up and previous bugs fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Custom">
-        <activity android:name=".aboutMe.AboutMeActivity"
-            android:parentActivityName=".main.MainActivity"></activity>
+        <receiver android:name=".WeatherAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/weather_app_widget_info" />
+        </receiver>
+
+        <activity
+            android:name=".aboutMe.AboutMeActivity"
+            android:parentActivityName=".main.MainActivity" />
         <activity
             android:name=".singleCity.SingleCityActivity"
-            android:parentActivityName=".main.MainActivity"></activity>
+            android:parentActivityName=".main.MainActivity" />
         <activity android:name=".singleTeta.SingleTetaActivity" />
         <activity
             android:name=".main.MainActivity"
