--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
 
+    apply plugin: 'kotlin-android-extensions'
+
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
